@@ -2,6 +2,7 @@
 	- work on DS2KE routine.
 	- val_nsec.c for validator NSEC proofs.
 	- unit test for NSEC bitmap reading.
+	- dname iswild and canonical_compare with unit tests.
 
 16 August 2007: Wouter
 	- DS sig unit test.
